--- a/test_manus/test_manus.Rmd
+++ b/test_manus/test_manus.Rmd
@@ -81,8 +81,8 @@ Methods
 ==========================
 
 ```{r set-dir, include = FALSE}
-require("knitr")
-opts_knit$set(root.dir = "/projappl/project_2003256/windDamage") #
+#require("knitr")
+#opts_knit$set(root.dir = "/projappl/project_2003256/windDamage") #
 
 
 ```
@@ -98,7 +98,7 @@ knitr::opts_chunk$set(echo = FALSE,
 
 ```
 
-### Study area 
+## Study area 
 
 Our study area represents a typical Finnish production forested landscape with relatively structurally homogenous forests stands. In total, we used 1475 forests stands aggregated within a single watershed (number 14.534) in Central Finland, covering 2242 ha (Fig. \ref{study_area}). Initial stand conditions were collected as open source data from the Finnish Forest Centre (available on www.metsaan.fi) providing currents stand conditions in 2016. 
 
@@ -111,19 +111,19 @@ Our input dataset includes initial stand conditions (2016), alternative forest g
 
 
 
-### Forest stand development under different regimes
+## Forest stand development under different regimes
 
 We simulated the development of the forests stands using SIMO forest growth simulator [@rasinmaki2009] over 100 years, separated into 20 5-year sequences. Each stand could be managed by up to 58 different management regimes (the total number of regimes per stands depended on the initial stand conditions), including 17 regimes for rotation forestry (RF), 40 variations of continuous cover forest (CCF) and one set-aside (SA), where no management actions were taken. RF regimes differed in timing of final felling, optional thinning (present/absent), and increase in number of retained green trees after final cut (more details in @Eyvindson2018). Basic CCF management follows rules from @Aijala2014a. To increase the range of CCF managements, we varied two rules defining the timing of harvest: (i) site-specific basal area and (ii) timing of the first thinning. We modified the pre-defined site-specific basal area requirement (16m2/ha for less fertile sites to 22m2/ha for fertile sites) prior to harvesting by -3, ±0, +3, +6,  and delayed the timing of the first harvest in 5 year increments up to a delay of 45 years. 
 
-### Optimization
+## Optimization
 
 The optimal forest management explores the trade-offs between net present income (NPI) and forest multifunctionality. NPI represents economic value of the forests estimated by Metsähallitus (the Finnish governmental organization managing state owned forests). Higher NPI presents higher timber extraction and opposes the proportion of the set-aside forest stands (i.e. without active harvesting) over the landscape. Optimization process over the NPI gradient was run using only RF, only CCF management types, or all possible managements (RF and CCF, further reffered as ALL) included over the gradient of NPI values, from 0 (representing completely set-aside or no management in all stands) to maximal amount of extracted timber (leaving up to 5% of SA stands). The optimization balances between harvest intensity and landscape-level multifunctionnality, including non-woody ecosystem services (climate change mitigation), recreational activities and vertebrate and non-vertebrate endangered species. The optimization resulted in 63 alternative collections of RF, CCF and ALL manamement regimes. We converted the optimal solutions back to the development paths for every stand under alternative management given group of management allowed (CCF, RF, ALL) and levels of timber extraction (21). Each stand has only one management regime by scenario. This allowed to reconstruct stand structure on particular stand under given management regime at specific time. 
 
-### Wind risk calculation
+## Wind risk calculation
 
 We have calculated the probability of wind damage based on @Suvanto2019 binomial generalized linear model with logit-link function for each stand for every time step at each scenario. @Suvanto2019 model calculates the probability of the wind damage considering available relevant open-access datasets including dominant tree species, dominant tree height, time since thinning, predicted levels on maximal wind speed, temperature sums, evaluated if stand has open edge, soil type, mineral soil depth, site fertility and temperature sum (see @Suvanto2019 for all details). The final probability of wind damage shows relative differences between stands, whereas the damage can be only partial to the stand, but neglects the explicit spatial locations of the future strongs winds. The parameters of the dominant tree species, tree height, open edge and time since thinning were dynamics under simulated management regimes. Parameters of maximal predicted wind speed and temperature sums, as well as soil characteristics, remained stable during our 100 years simulation. We processed the datasets, calculated damage probability models, and visualized results using @RDevelopmentCoreTeam2019. 
 
-### Data processing
+## Data processing
 
 We calculated the probability of wind damage for each stand, scenario and time intervals. Further, we averaged the wind risk values over the scenarios to allow comparison between RF, CCF and ALL management regimes groups over the harvesting gradient. We explored the mean wind risk (%) given the management groups and over harvest gradient (from set-aside to maximal harvest levels). In addition, we investigated the mean levels of the standing log and pulp timber volumes (m3) for scenarios, and total sum of harvested pulp and log timber over simulation run (XXX). We further investigated the changes in dynamics parameters (tree species, dominant tree height, frequency of open edges and time since thinning) over the harvest intensity gradient to understand how they contributed to predicted wind risk values. As different tree species varied in wind risk probability, we further groupped this variable by species to understand differences between species, Specifically, we calculated mean proportion of individual tree species (%),  mean tree heights (m), proportion of the stands with open edge from total amount of stands by species and mean thinning frequencies by year.  
 
@@ -139,7 +139,7 @@ rm(list = ls())
 #.libPaths(c("/projappl/project_2003256/project_rpackages", #.libPaths()))
 #libpath <- .libPaths()[1]
 
-.libPaths(c("/projappl/project_2003256/project_rpackages", .libPaths()))
+#.libPaths(c("/projappl/project_2003256/project_rpackages", .libPaths()))
 
 
 # , eval = FALSE
@@ -180,9 +180,9 @@ theme_update(panel.grid.major = element_line(colour = "grey95",
 
 # Read datasets:
 # ----------------------------------------
-#df <- fread("C:/MyTemp/myGitLab/windDamage/output/final_df.csv")
+df <- fread("C:/MyTemp/myGitLab/windDamage/output/final_df.csv")
 #df <- fread("final_df.csv")
-df <- fread(paste0(getwd(), "/output/final_df.csv"))
+#df <- fread(paste0(getwd(), "/output/final_df.csv"))
 
 # df <- fread("/output/final_df.csv")
 # stands geometry
@@ -266,12 +266,11 @@ ggarrange(p.mean.risk.npi,
 
 ### Timber volume at wind risk
 
-<<<<<<< HEAD
 All three types of management groups responds similarly to set-aside stands: stading timber volume decreases in set-aside stands, which corresponds to preferential selection of the low quality stands to be set as set-aside at the beginning of teh simulation period. Standing mean log timber volume slightly increases with harvesting intensity where increases from  50m3 to 75m3 with the highest increase in RF. In set aside stands, the highest mean top stratum timber volume starts as 150 m3 and lowers to 50 m3/ha with increasing harvest intensity. In pulp wood,RF has three times higher pulp volume compared to CCF as low harvest intensities, the pulp volume in CCF remains relatively stable with increasing harvest intensity.    
-=======
+
+
 All three types of management groups responds similarly to set-aside stands: stading timber volume decreases in set-aside stands, which corresponds to preferential selection of the low quality stands to be set as set-aside at the beginning of teh simulation period. Standing mean log timber volume slightly increases with harvesting intensity where increases from  50m3 to 75m3 with the highest increase in RF. In set aside stands, the highest mean top stratum timber volume starts as 150 m3 and lowers to 50 m3/ha with increasing harvest intensity. In pulp wood,RF has three times higher pulp volume compared to CCF as low harvest intensities, the pulp volume in CCF remains relatively stable with increasing harvest intensity. Over time, the log volume culminates in RF in year 2100 to up to 150 m3 in to top layers, while remaines halved in CCF, whereas the pulp volume starts at the same levels for CCF and RF in 2016 and in next 40 years (from 2060) in RF dominates the proportion of teh pulp wood over the CCF. Overall, the log timber in in SA stands increases over time, as they were not logged, and sligtthly decreases in teh amount of pulp wood. 
 
->>>>>>> f35d670dc2a261f9f3c05ed566417244429b0dc8
 
 ```{r plot_V_timber, fig.width = 6, eval=F, fig.height = 6, fig.cap = "A. Mean standing and B. harvested pulp and log timber under three types of management regimes over harvest intensity gradient. Please note the range of y axis"}
 
