new clean file created

--- a/test_manus/test_manus2.tex
+++ b/test_manus/test_manus2.tex
@@ -261,8 +261,8 @@ optimization to landscape level stand configurations.\label{workflow}}
 regimes}\label{forest-stand-development-under-different-regimes}
 
 We simulated the development of the forests stands using SIMO forest
-growth simulator ({\textbf{???}}) over 100 years, separated into 20
-5-year sequences. Each stand could be managed by up to 58 different
+growth simulator (Rasinmäki et al., 2009) over 100 years, separated into
+20 5-year sequences. Each stand could be managed by up to 58 different
 management regimes (the total number of regimes per stands depended on
 the initial stand conditions), including 17 regimes for rotation
 forestry (RF), 40 variations of continuous cover forest (CCF) and one
@@ -409,13 +409,11 @@ same (mean 100 m3/ha)in RF with increasing harvesting rates.
 
 \begin{figure}
 \centering
-\includegraphics{test_manus_files/figure-latex/fig_risk_V_all-1.pdf}
-\caption{(\#fig:fig\_risk\_V\_all)Mean log (left) and pulp (right)
-timber volume of the top tree layer in the stands over management groups
-over harvesting intensity gradient (top) and over years (bottom)}
+\includegraphics{test_manus2_files/figure-latex/show-plot-volume-1.pdf}
+\caption{\label{fig:show-plot-volume}Mean log (left) and pulp (right) timber
+volume of the top tree layer in the stands over management groups over
+harvesting intensity gradient (top) and over years (bottom)}
 \end{figure}
-
-\subsubsection{Changes in wind risk}\label{changes-in-wind-risk}
 
 \subsection{Dynamic parameters contributing to wind
 risk}\label{dynamic-parameters-contributing-to-wind-risk}
@@ -429,13 +427,6 @@ the harvesting favorize the proportion of the Norway spruce and others
 increases wind risk over the stands. Proportion of the pine lowers with
 higher harvest intensities.
 
-\begin{figure}
-\centering
-\includegraphics{test_manus_files/figure-latex/species_change-1.pdf}
-\caption{(\#fig:species\_change)Changes in species composition under
-different management groups and harvest intensity.}
-\end{figure}
-
 \subsubsection{Dominant tree heights}\label{dominant-tree-heights}
 
 The intensification of the harvest reduce mean tree height for other
@@ -444,18 +435,7 @@ mean tree heights.For pine and spruce trees, harvest intensification
 maintain the mean tree height of the stand to 20 m(other) to 22 m
 (spruce). Spruce is higher then pine and other stree species.
 
-\begin{figure}
-\centering
-\includegraphics{test_manus_files/figure-latex/res_D_tree_height-1.pdf}
-\caption{(\#fig:res\_D\_tree\_height)Mean dominant tree height under
-different management groups and harvest intensity.}
-\end{figure}
-
 \subsubsection{Tree count}\label{tree-count}
-
-\includegraphics{test_manus_files/figure-latex/mean_tree_n-1.pdf}
-
-\includegraphics{test_manus_files/figure-latex/wind_risk_SA-1.pdf}
 
 \subsubsection{Frequency of open stands}\label{frequency-of-open-stands}
 
@@ -468,14 +448,6 @@ dominated spatnd, especially under RF. The CCF and ALL management groups
 maintain the number of the open edge stands similar to completely set
 aside stands.
 
-\begin{figure}
-\centering
-\includegraphics{test_manus_files/figure-latex/fig_6_count_open_edge-1.pdf}
-\caption{(\#fig:fig\_6\_count\_open\_edge)Yearly proportion stands with
-open edge by species, management group and over the harvest intensity
-gradient. Note y axis starts at 80.}
-\end{figure}
-
 \subsubsection{Thinning frequency}\label{thinning-frequency}
 
 the highest frequency of thinnings is under CCF management regimes,
@@ -485,7 +457,8 @@ ALL, and strongly increases at high harvest intensity (from 3K for pine
 and from 5K for spruce). The frequency of thinnings in CCF increases 3-4
 times in CCF comparing to RF.
 
-\includegraphics{test_manus_files/figure-latex/unnamed-chunk-2-1.pdf}
+\includegraphics{test_manus2_files/figure-latex/plot-dynamic-vars-1.pdf}
+\includegraphics{test_manus2_files/figure-latex/plot-dynamic-vars-2.pdf}
 
 \section{Discussion}\label{discussion}
 
@@ -589,6 +562,12 @@ doi:\href{https://doi.org/10.1139/cjfr-2017-0251}{10.1139/cjfr-2017-0251}
 \hypertarget{ref-RDevelopmentCoreTeam2019}{}
 R Development Core Team, 2019. R: A language and environment for
 statistical computing.
+
+\hypertarget{ref-Rasinmaki2009}{}
+Rasinmäki, J., Mäkinen, A., Kalliovirta, J., 2009. SIMO: An adaptable
+simulation framework for multiscale forest resource data. Computers and
+Electronics in Agriculture 66, 76--84.
+doi:\href{https://doi.org/10.1016/j.compag.2008.12.007}{10.1016/j.compag.2008.12.007}
 
 \hypertarget{ref-Suvanto2019}{}
 Suvanto, S., Peltoniemi, M., Tuominen, S., Strandström, M., Lehtonen,
